# dontpanic-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  rustfmt.toml
.github/workflows/: publish.yml  pullRequests.yml  test.yml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  main.jsx  theme.jsx
frontend/src/components/: AppLayout.jsx  AuthLayout.jsx  ConsistentIcons.jsx  DeleteAccount.jsx  EmailNotifications.jsx  ErrorFallback.jsx  Footer.jsx  LoadingPage.jsx  Logo.jsx  Manage2FA.jsx  NoRowsOverlay.jsx  PasswordChange.jsx  RequestEmailChange.jsx  ResendVerificationEmail.jsx  SideMenu.jsx  UserNotifications.jsx
frontend/src/components/form/: ControlledCheckbox.jsx  ControlledTextField.jsx  FormServerError.jsx  index.jsx
frontend/src/components/integrations/: SlackApp.jsx  SlackWebhook.jsx  TeamsWebhook.jsx  Webhook.jsx
frontend/src/components/stats/: ApiUsage.jsx  NewReports.jsx
frontend/src/context/: config.jsx  user.jsx
frontend/src/pages/: Account.jsx  Login.jsx  NotFound.jsx  PasswordReset.jsx  Project.jsx  Projects.jsx  Register.jsx  Report.jsx  Reports.jsx  ReportsList.jsx  VerifyEmail.jsx
frontend/src/pages/auth/: ChangeEmail.jsx  Login.jsx  Login.test.jsx  PasswordReset.jsx  PasswordResetRequest.jsx  Register.jsx  VerifyEmail.jsx
frontend/src/pages/organization/: Add.jsx  MemberInvite.jsx  MemberManage.jsx  Members.jsx  Organization.jsx  ProjectManage.jsx  Projects.jsx  Settings.jsx  Usage.jsx
frontend/src/pages/project/: Notifications.jsx  ReportsList.jsx
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_users_and_crates.rs  m20240830_153930_project_slack_webhhok.rs  m20240908_063351_webhook_integration.rs  m20241219_101859_invitation_slug.rs  m20250108_135710_pushover_integration.rs  m20250109_082535_teams_integration.rs  m20250109_115247_report_uid.rs  m20250130_061705_report_counters.rs  m20250130_065644_report_events.rs  m20250204_035650_organization_stats.rs  m20250219_073234_report_stat_spiking.rs  m20250219_093632_org_requests_alert.rs  m20250908_130953_environment_notification_settings.rs
src/: api_response.rs  config.rs  cron.rs  entity_extensions.rs  error.rs  event.rs  handlers.rs  identity.rs  main.rs  notifications.rs  view_model.rs
src/entity/: mod.rs  organization_invitations.rs  organization_stats.rs  organization_users.rs  organizations.rs  prelude.rs  project_environments.rs  project_report_events.rs  project_report_stats.rs  project_reports.rs  project_user_settings.rs  projects.rs  users.rs
src/handlers/: account.rs  auth.rs  ingress.rs  menu.rs  notifications.rs  organizations.rs  reports.rs
src/handlers/account/: totp.rs
src/handlers/auth/: change_email.rs  login.rs  register.rs  request_password_reset.rs  resend_verification_email.rs  reset_password.rs  user.rs  verify_email.rs
src/handlers/notifications/: slack_app.rs  slack_webhook.rs  teams_webhook.rs  webhook.rs
src/handlers/organizations/: members.rs  projects.rs  stats.rs
static/css/: style.css
static/libs/awesome-notifications/: style.css
templates/: error.hbs  layout.hbs  layout_auth.hbs  sidemenu.hbs
templates/account/: view.hbs
templates/auth/: email_verified.hbs  login.hbs  password_reset.hbs  password_reset_request.hbs  register.hbs  register_success.hbs
templates/components/: footer.hbs  icon.hbs  organization_tabs.hbs  text_input.hbs
templates/email/: change-email.hbs  confirmation.hbs  layout.hbs  limit_approaching.hbs  limit_reached.hbs  new_login.hbs  new_report.hbs  org_invitation.hbs  org_limit_reached.hbs  org_member_added.hbs  org_requests_alert.hbs  password_reset.hbs  regressed_report.hbs  spiking_report.hbs  style.hbs
templates/notifications/: setup.hbs  slack_config.hbs  slack_webhook.hbs  webhook.hbs
templates/organizations/: create.hbs  invite.hbs  member_edit.hbs  members.hbs  notifications.hbs  project_create.hbs  project_edit.hbs  projects.hbs  settings.hbs  view.hbs
templates/reports/: event.hbs  list.hbs  no_event.hbs  view.hbs
