[package]
name = "dontpanic-server"
version = "0.5.1"
edition = "2021"
publish = false
license = "AGPL-3.0-only"

[workspace]
members = [".", "migration"]

[dependencies]
log = "0.4"
anyhow = "1"
dotenvy = "0.15"
env_logger = "0.11"
chrono = "0.4"
bcrypt = "0.16"
rand = "0.8"
rand_seeder = "0.3"
serde = "1"
serde_json = "1"
handlebars = { version = "6", features = ["dir_source"] }
validator = { version = "0.19", features = ["derive"] }
chrono-tz = { version = "0.10", features = ["std", "case-insensitive"] }
google-authenticator = "0.4"
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
key-lock = "0.1"

actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
actix-web-lab = "0.23"
actix-session = { version = "0.10", features = ["cookie-session"] }

migration = { path = "migration" }
rust_decimal = "1.36.0"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["http2", "json", "charset", "rustls-tls"]

[dependencies.lettre]
version = "0.11"
default-features = false
features = [
    "builder",
    "hostname",
    "pool",
    "smtp-transport",
    "tokio1-rustls-tls",
]

[dependencies.sea-orm]
version = "1.0"
features = [
    "runtime-actix-rustls",
    "sqlx-mysql",
    "sqlx-sqlite",
    "macros",
    "with-chrono",
    "debug-print",
]

[dev-dependencies]
actix-http = "3.9.0"
